src/App.css
#root {
  max-width: 90%;
  margin: 0 auto;
  padding: 2rem;
  text-align: center;
}

* {
  background-color: #ffd90f;
  color: black;
  text-shadow: 3px 3px 3px white;
  font-family: 'Homer Simpson Revised', sans-serif;
  font-size: 1.25rem;
}


.cell-container {
  display: flex;
  flex-wrap: wrap;
}

.episodeImg {
  margin-top: 3px;
}

.cardImg {
  width: 700px;
}

.navBar {
  margin: 20px;
}

.navButton {
  margin: 5px;
}

button {
  border-radius: 30px;
  border: 2px solid whitesmoke;
  padding: 0.6em 1.2em;
  font-size: 1em;
  font-weight: 500;
  font-family: inherit;
  cursor: pointer;
  transition: border-color 0.25s;
  background-color: whitesmoke;
}

button:hover {
  border-color: #646cff;
  background-color: #ffd90f;
}

button:focus,
button:focus-visible {
  outline: 4px auto -webkit-focus-ring-color;
}


.cell {
  border: 2px solid white;
  border-radius: 20px;
  margin: 10px;
  width: 29%;
  padding: 5px;
}

.homeIMG {
  max-width: 90%;
}

@media (max-width: 820px) {

  .cell-container {
    flex-direction: column;
    margin: 0 auto;
  }

.homeDiv {
  font-size: small;
}

 .cell {
  width: 60vw;
 }

 .navBar {
  width: 80vw;
  margin: 0 auto;
  margin-bottom: 20px;
 }


}

